--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-# Copy this file to .env and fill in your MySQL credentials
+# Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Ndesai2510@2006
+DB_PASSWORD=2712
 DB_NAME=workzen
+
+# Server Configuration
+PORT=5000
+
+# CORS Configuration (Frontend URL)
+CORS_ORIGIN=http://localhost:3000
