--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=2712
+DB_PASSWORD=Ndesai2510@2006
 DB_NAME=workzen
 
 # Server Configuration
@@ -9,3 +9,13 @@ PORT=5000
 
 # CORS Configuration (Frontend URL)
 CORS_ORIGIN=http://localhost:3000
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# Email Configuration (Gmail)
+EMAIL_USER=bravetiger0001@gmail.com
+EMAIL_PASSWORD=luwityyp zxpteies
+# Note: For Gmail, use App Password (not regular password)
+# Generate at: https://myaccount.google.com/apppasswords
+# Remove spaces from the password above if you have them
